Улучшения KafkaRecordsManager, KafkaTopicListener.